[project]
name = "workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.3",
    "networkx>=3.4.2",
    "numpy>=2.2.6",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "plotly>=6.1.2",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.3",
    "streamlit>=1.45.1",
    "xlrd>=2.0.1",
]
